src/main/default/objects/ProductSetting__mdt/ProductSetting__mdt.object-meta.xml
<CustomObject>
    <description>Settings used for operations related to Products.</description>
    <label>Product Setting</label>
    <pluralLabel>Product Settings</pluralLabel>
</CustomObject>