src/main/default/objects/ProductSetting__mdt/fields/DRSProductRelationshipRulePrefix__c.field-meta.xml
<CustomField>
    <fullName>DRSProductRelationshipRulePrefix__c</fullName>
    <label>DRS Product Relationship Rule Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>