src/main/default/objects/ProductSetting__mdt/fields/FocusFiveEngland__c.field-meta.xml
<CustomField>
    <fullName>FocusFiveEngland__c</fullName>
    <inlineHelpText>Please select number of days the Focus 5 products are not bought for England market.</inlineHelpText>
    <label>Focus 5 - England</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>