src/main/default/objects/ProductSetting__mdt/fields/FocusFiveScotland__c.field-meta.xml
<CustomField>
    <fullName>FocusFiveScotland__c</fullName>
    <inlineHelpText>Please select number of days the Focus 5 products are not bought for Scotland market.</inlineHelpText>
    <label>Focus 5 - Scotland</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>