src/main/default/objects/ProductSetting__mdt/fields/FocusProductAttributeCategory__c.field-meta.xml
<CustomField>
    <fullName>FocusProductAttributeCategory__c</fullName>
    <inlineHelpText>Please populate code of Attribute Category used for Focused Products</inlineHelpText>
    <label>Focus Product Attribute Category</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>